[package]
name = "code4canadachallenge"
version = "0.1.0"
authors = ["Arunscape <arun@woosaree.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
gnuplot = "0.0.37"
serde = { version = "1.0", features = ["derive"] }
